[gd_scene load_steps=6 format=3 uid="uid://scjy12nvt15j"]

[ext_resource type="Script" uid="uid://s0e6c3438d38" path="res://Scripts/GameManager.gd" id="1"]
[ext_resource type="PackedScene" path="res://Scenes/Player.tscn" id="2"]
[ext_resource type="PackedScene" path="res://Scenes/TestLevel.tscn" id="3"]
[ext_resource type="Script" uid="uid://dubcrplhh7xmq" path="res://Scripts/UIManager.gd" id="4"]
[ext_resource type="Script" uid="uid://bslkej30uieo1" path="res://Scripts/LevelManager.gd" id="5"]

[node name="Main" type="Node2D"]

[node name="GameManager" type="Node" parent="."]
script = ExtResource("1")

[node name="LevelManager" type="Node" parent="."]
script = ExtResource("5")

[node name="World" type="Node2D" parent="."]

[node name="TestLevel" parent="World" instance=ExtResource("3")]

[node name="Player" parent="World" instance=ExtResource("2")]
position = Vector2(300, 380)

[node name="UI" type="CanvasLayer" parent="."]

[node name="UIManager" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4")
